# qGlitchlessLauncher

./: .gitignore  CMakeLists.txt  README.md  assets.qrc  mainwindow.cpp  qGlitchlessLauncher_ru_RU.ts
src/assets/: assets.qrc
src/lang/: qGlitchlessLauncher_ru_RU.ts
src/main/: main.cpp
src/main/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
